<?xml version="1.0"?>
<package>
  <name>renbo_grasp_generator</name>
  <version>0.0.0</version>
  <description>The renbo_grasp_generator package</description>

  <maintainer email="shtseng@todo.todo">shtseng</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>rviz_visual_tools</build_depend>
  <build_depend>renbo_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>rviz_visual_tools</run_depend>
  <run_depend>renbo_msgs</run_depend>
  
  <export>

  </export>
</package>
